# trex

./: .dockerignore  .gitignore  .npmignore  .npmrc  Cargo.toml  Dockerfile.trex  README.md  bunfig.toml  docker-compose-test.yml  docker-compose.yml  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker-build-push.yml  npm-ci.yml
apifun/: package.json
apifun/d2e-functions/etc/_fastifytest/: index.ts  package.json  security.ts  service.ts
apifun/etc/_Xoak/: index.ts
apifun/etc/_fastifytest/: openapi.yaml
apifun/functions/alp-gateway/: Dockerfile  index.ts  xs-app.ts
apifun/functions/dashboard-gate/: DashboardGateRouter.ts
apifun/functions/dataset/: DataflowMgmtAPI.ts  PortalAPI.ts
apifun/functions/db/: index.ts  request-util.ts
apifun/functions/fhir/: FhirApi.ts  Logger.ts
apifun/security/authentication/: const.ts  scopes.ts
cli/: Cargo.toml
cli/src/: flags.rs  main.rs
core/: dbfunctions.ts
core/event/: env.ts  index.ts
core/hdb/: index.ts
core/server/: env.ts  index.ts  portal-routes.ts  standalone.ts
core/server/api/: OpenIDAPI.ts  UserMgmtAPI.ts  request-util.ts
core/server/auth/: Authc.ts  MriUser.ts  addSubtoReq.ts  authn.ts  authorized.ts  authz.ts  sample_token.ts  token-handler.ts
core/server/db/: MigrationSource.ts  config.ts  knex.ts
core/server/lib/: dbm.ts  schema.ts
core/server/plugin/: db.ts  dbfunctions.ts  flow.ts  function.ts  plugin.ts  ui.ts  utils.ts
core/server/routes/: base.ts  dbm.ts  plugin.ts  portal.ts
crates/base/: Cargo.toml  build.rs
crates/base/src/: deno_runtime.rs  server.rs
crates/base/tests/: integration_tests.rs
crates/fs/impl/: prefix_fs.rs  virtual_fs.rs
crates/fs/tests/: integration_tests.rs
crates/graph/: graph_fs.rs  graph_util.rs  resolver.rs
crates/sb_core/: lib.rs
crates/sb_core/js/: bootstrap.js  main_worker.js
ext/core/: Cargo.toml  lib.rs  permissions.rs
ext/core/cache/: module_info.rs
ext/core/js/: bootstrap.js  edge_runtime.js  namespaces.js
ext/node/: resolution.rs
ext/trex/: Cargo.toml  lib.rs  main.rs  replication.rs  trex_lib.js
ext/trex/clients/: duckdb.rs  mod.rs  pgwire.rs  postgres.rs
ext/trex/conversions/: cdc_event.rs  mod.rs  psql.rs  table_row.rs
ext/trex/core/: auth.rs  duckdb.rs  mod.rs  replication.rs  sql.rs
ext/trex/core/sink/: duckdb.rs  executor.rs  mod.rs  sink.rs
ext/trex/js/: hdbconnection.js  pgconnection.js  trex_lib.js
ext/trex/pipeline/: mod.rs
ext/trex/pipeline/batching/: data_pipeline.rs
ext/trex/pipeline/sinks/: mod.rs  stdout.rs
ext/trex/pipeline/sinks/duckdb/: executor.rs  sink.rs
ext/trex/pipeline/sources/: mod.rs  postgres.rs
ext/trex/sql/: auth.rs  duckdb.rs  mod.rs
ext/trex_core/: Cargo.toml  lib.rs  trex_lib.js
scripts/: build.ts  build_plugin.sh  run.sh  trextest.sh
test/_test/plugins/: index.ts
test/event-manager/: index.ts
test/express/: index.ts
test/main/: index.ts  test_main.ts
test/sql/: index.ts
trex/server/: index.ts
(+41 files in other folders)
